# michi-music-stream

./: .gitignore  LICENSE  README.md
.github/workflows/: ci.yml
docs/: AUDIO_SESSION.md  FIRMWARE_ARCHITECTURE.md  HARDWARE_HIFI.md  HARDWARE_STANDARD.md  INTEGRATION_WITH_MICRO_SERVER.md  MICHI_LINK_V1_LITE.md  MICRO_SERVER_RECEIVER_TESTING.md  NETWORKING.md  OVERVIEW.md  PAIRING_BUTTON.md  RECEIVER_SIMULATOR.md  RECEIVER_SIMULATOR_CI.md  ROADMAP.md
examples/: error-example.json  error-invalid-token.json  error-pairing-closed.json  error-session-active.json  error-unsupported-rate.json  firmware-info.json  heartbeat-request.json  pair-confirm.json  pair-start.json  receiver-hifi-info.json  receiver-standard-info.json  session-start.json  volume-request.json
firmware/: CMakeLists.txt  Kconfig
firmware/common/: CMakeLists.txt  app_core.c  app_core.h  audio_output.c  audio_output.h  discovery.c  discovery.h  heartbeat.c  heartbeat.h  led.c  led.h  michi_link_lite.c  michi_link_lite.h  ota_update.c  ota_update.h  pairing.c  pairing.h  pcm5122.c  pcm5122.h  receiver_info.c  receiver_info.h  session.c  session.h  volume.c  volume.h  wifi_prov.c  wifi_prov.h
firmware/hifi/: CMakeLists.txt  README.md  config.h  main.c
firmware/standard/: README.md  config.h  main.c
scripts/: build_firmware.sh  flash_firmware.sh  run_receiver_sim_hifi.sh  run_receiver_sim_pairing_closed.sh  run_receiver_sim_standard.sh  run_tests.sh  test_receiver_simulator.sh
simulator/: README.md  config.example.json  receiver_sim.py
simulator/tests/: test_integration_http.py  test_simulator.py
(+2 files in other folders)
